--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -32,20 +32,12 @@ django-redis==5.4.0
     # via tumbs.app (pyproject.toml)
 django-webpack-loader==3.0.1
     # via tumbs.app (pyproject.toml)
-gevent==23.9.1
-    # via gunicorn
-greenlet==3.0.3
-    # via gevent
-gunicorn==21.2.0
-    # via tumbs.app (pyproject.toml)
 hiredis==2.3.2
     # via tumbs.app (pyproject.toml)
 markupsafe==2.1.4
     # via werkzeug
 packaging==23.2
-    # via
-    #   build
-    #   gunicorn
+    # via build
 pillow==10.2.0
     # via tumbs.app (pyproject.toml)
 pip-tools==7.3.0
@@ -76,10 +68,6 @@ wheel==0.42.0
     # via pip-tools
 whitenoise==6.6.0
     # via tumbs.app (pyproject.toml)
-zope-event==5.0
-    # via gevent
-zope-interface==6.1
-    # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
