--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -10,11 +10,11 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 asgiref==3.7.2
     # via django
-boto3==1.34.30
+boto3==1.34.31
     # via
     #   django-anymail
     #   django-storages
-botocore==1.34.30
+botocore==1.34.31
     # via
     #   boto3
     #   s3transfer
@@ -23,13 +23,9 @@ certifi==2023.11.17
     #   requests
     #   sentry-sdk
 cffi==1.16.0
-    # via
-    #   argon2-cffi-bindings
-    #   cryptography
+    # via argon2-cffi-bindings
 charset-normalizer==3.3.2
     # via requests
-cryptography==42.0.1
-    # via django-anymail
 django==5.0.1
     # via
     #   django-anymail
