--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "hiredis",                      # https://github.com/redis/hiredis-py
 
     "django",                       # https://www.djangoproject.com/
+    "django-ordered-model",         # https://github.com/django-ordered-model/django-ordered-model
     "django-environ",               # https://github.com/joke2k/django-environ
     "django-redis",                 # https://github.com/jazzband/django-redis
     "django-webpack-loader",        # https://github.com/django-webpack/django-webpack-loader
