--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -10,11 +10,11 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 asgiref==3.7.2
     # via django
-boto3==1.34.34
+boto3==1.34.38
     # via
     #   django-anymail
     #   django-storages
-botocore==1.34.34
+botocore==1.34.38
     # via
     #   boto3
     #   s3transfer
@@ -26,7 +26,7 @@ cffi==1.16.0
     # via argon2-cffi-bindings
 charset-normalizer==3.3.2
     # via requests
-django==5.0.1
+django==5.0.2
     # via
     #   django-anymail
     #   django-redis
@@ -35,6 +35,8 @@ django==5.0.1
 django-anymail==10.2
     # via tumbs.app (pyproject.toml)
 django-environ==0.11.2
+    # via tumbs.app (pyproject.toml)
+django-ordered-model==3.7.4
     # via tumbs.app (pyproject.toml)
 django-redis==5.4.0
     # via tumbs.app (pyproject.toml)
@@ -60,9 +62,9 @@ packaging==23.2
     # via gunicorn
 pillow==10.2.0
     # via tumbs.app (pyproject.toml)
-psycopg==3.1.17
+psycopg==3.1.18
     # via tumbs.app (pyproject.toml)
-psycopg-c==3.1.17
+psycopg-c==3.1.18
     # via psycopg
 pycparser==2.21
     # via cffi
@@ -76,7 +78,7 @@ requests==2.31.0
     # via django-anymail
 s3transfer==0.10.0
     # via boto3
-sentry-sdk==1.40.0
+sentry-sdk==1.40.2
     # via tumbs.app (pyproject.toml)
 six==1.16.0
     # via python-dateutil
