--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -30,13 +30,15 @@ cssbeautifier==1.14.11
     # via djlint
 dill==0.3.8
     # via pylint
-django==5.0.1
+django==5.0.2
     # via
     #   django-redis
     #   tumbs.app (pyproject.toml)
 django-coverage-plugin==3.1.0
     # via tumbs.app (pyproject.toml)
 django-environ==0.11.2
+    # via tumbs.app (pyproject.toml)
+django-ordered-model==3.7.4
     # via tumbs.app (pyproject.toml)
 django-redis==5.4.0
     # via tumbs.app (pyproject.toml)
