--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ asgiref==3.7.2
     # via django
 cffi==1.16.0
     # via argon2-cffi-bindings
-django==5.0.1
+django==5.0.2
     # via
     #   django-redis
     #   tumbs.app (pyproject.toml)
 django-environ==0.11.2
+    # via tumbs.app (pyproject.toml)
+django-ordered-model==3.7.4
     # via tumbs.app (pyproject.toml)
 django-redis==5.4.0
     # via tumbs.app (pyproject.toml)
