Introduce auth service

--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,6 @@
-DJANGO_SETTINGS_MODULE=config.settings.local
-PYTHONUNBUFFERED=1
+export DJANGO_SETTINGS_MODULE=config.settings.local
+export KINDE_ISSUER_URL="https://tumbsapp-dev.eu.kinde.com"
+export KINDE_CALLBACK_URL="http://localhost:3000/accounts/verify/"
+export KINDE_CLIENT_ID=
+export KINDE_CLIENT_SECRET=
+export PYTHONUNBUFFERED=1
