--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -10,22 +10,29 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 asgiref==3.7.2
     # via django
-boto3==1.34.38
+authlib==1.2.1
+    # via kinde-python-sdk
+boto3==1.34.39
     # via
     #   django-anymail
     #   django-storages
-botocore==1.34.38
+botocore==1.34.39
     # via
     #   boto3
     #   s3transfer
-certifi==2024.2.2
+certifi==2022.12.7
     # via
+    #   kinde-python-sdk
     #   requests
     #   sentry-sdk
 cffi==1.16.0
-    # via argon2-cffi-bindings
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
 charset-normalizer==3.3.2
     # via requests
+cryptography==42.0.2
+    # via authlib
 django==5.0.2
     # via
     #   django-anymail
@@ -44,6 +51,8 @@ django-storages==1.14.2
     # via tumbs.app (pyproject.toml)
 django-webpack-loader==3.0.1
     # via tumbs.app (pyproject.toml)
+frozendict==2.3.10
+    # via kinde-python-sdk
 gevent==23.9.1
     # via gunicorn
 greenlet==3.0.3
@@ -58,6 +67,8 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
+kinde-python-sdk==1.2.2
+    # via tumbs.app (pyproject.toml)
 packaging==23.2
     # via gunicorn
 pillow==10.2.0
@@ -68,28 +79,37 @@ psycopg-c==3.1.18
     # via psycopg
 pycparser==2.21
     # via cffi
+pyjwt==2.8.0
+    # via kinde-python-sdk
 python-dateutil==2.8.2
-    # via botocore
+    # via
+    #   botocore
+    #   kinde-python-sdk
 redis==5.0.1
     # via
     #   django-redis
     #   tumbs.app (pyproject.toml)
 requests==2.31.0
-    # via django-anymail
+    # via
+    #   django-anymail
+    #   kinde-python-sdk
 s3transfer==0.10.0
     # via boto3
-sentry-sdk==1.40.2
+sentry-sdk==1.40.3
     # via tumbs.app (pyproject.toml)
 six==1.16.0
     # via python-dateutil
 sqlparse==0.4.4
     # via django
-typing-extensions==4.9.0
-    # via psycopg
+typing-extensions==4.8.0
+    # via
+    #   kinde-python-sdk
+    #   psycopg
 urllib3==2.0.7
     # via
     #   botocore
     #   django-anymail
+    #   kinde-python-sdk
     #   requests
     #   sentry-sdk
 whitenoise==6.6.0
