--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,20 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 asgiref==3.7.2
     # via django
+authlib==1.2.1
+    # via kinde-python-sdk
+certifi==2022.12.7
+    # via
+    #   kinde-python-sdk
+    #   requests
 cffi==1.16.0
-    # via argon2-cffi-bindings
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
+charset-normalizer==3.3.2
+    # via requests
+cryptography==42.0.2
+    # via authlib
 django==5.0.2
     # via
     #   django-redis
@@ -24,17 +36,37 @@ django-redis==5.4.0
     # via tumbs.app (pyproject.toml)
 django-webpack-loader==3.0.1
     # via tumbs.app (pyproject.toml)
+frozendict==2.3.10
+    # via kinde-python-sdk
 hiredis==2.3.2
+    # via tumbs.app (pyproject.toml)
+idna==3.6
+    # via requests
+kinde-python-sdk==1.2.2
     # via tumbs.app (pyproject.toml)
 pillow==10.2.0
     # via tumbs.app (pyproject.toml)
 pycparser==2.21
     # via cffi
+pyjwt==2.8.0
+    # via kinde-python-sdk
+python-dateutil==2.8.2
+    # via kinde-python-sdk
 redis==5.0.1
     # via
     #   django-redis
     #   tumbs.app (pyproject.toml)
+requests==2.31.0
+    # via kinde-python-sdk
+six==1.16.0
+    # via python-dateutil
 sqlparse==0.4.4
     # via django
+typing-extensions==4.8.0
+    # via kinde-python-sdk
+urllib3==2.0.7
+    # via
+    #   kinde-python-sdk
+    #   requests
 whitenoise==6.6.0
     # via tumbs.app (pyproject.toml)
