--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.23.3",
     "@popperjs/core": "^2.10.2",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
-    "css-loader": "^6.5.1",
     "concurrently": "^8.0.1",
+    "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass-tilde-importer": "^1.0.2",
     "postcss": "^8.3.11",
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.43.4",
     "sass-loader": "^14.1.0",
     "webpack": "^5.65.0",
@@ -26,14 +29,15 @@
     "webpack-merge": "^5.8.0"
   },
   "engines": {
-    "node": "21"
+    "node": "20"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   },
   "scripts": {
@@ -41,10 +45,8 @@
     "dev": "concurrently npm:dev:*",
     "dev:webpack": "webpack serve --config webpack/dev.config.js",
     "dev:django": "python manage.py runserver_plus",
-
     "msg:make": "python manage.py makemessages -l cs --ignore=venv --no-location",
     "msg:compile": "python manage.py compilemessages --ignore=venv",
-
     "reqs": "concurrently npm:reqs:*",
     "reqs:base": "pip-compile --resolver=backtracking --strip-extras --upgrade -o requirements.txt pyproject.toml",
     "reqs:dev": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra dev -o requirements-dev.txt pyproject.toml",
