--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile --extra=dev --output-file=requirements-dev.txt --strip-extras pyproject.toml
 #
+annotated-types==0.6.0
+    # via pydantic
 argon2-cffi==23.1.0
     # via tumbs.app (pyproject.toml)
 argon2-cffi-bindings==21.2.0
@@ -32,6 +34,7 @@ django==5.0.2
     # via
     #   django-debug-toolbar
     #   django-extensions
+    #   django-ninja
     #   django-redis
     #   tumbs.app (pyproject.toml)
 django-debug-toolbar==4.3.0
@@ -39,6 +42,8 @@ django-debug-toolbar==4.3.0
 django-environ==0.11.2
     # via tumbs.app (pyproject.toml)
 django-extensions==3.2.3
+    # via tumbs.app (pyproject.toml)
+django-ninja==1.1.0
     # via tumbs.app (pyproject.toml)
 django-ordered-model==3.7.4
     # via tumbs.app (pyproject.toml)
@@ -68,6 +73,10 @@ psycopg-binary==3.1.18
     # via psycopg
 pycparser==2.21
     # via cffi
+pydantic==2.6.1
+    # via django-ninja
+pydantic-core==2.16.2
+    # via pydantic
 pyjwt==2.8.0
     # via kinde-python-sdk
 pyproject-hooks==1.0.0
@@ -90,6 +99,8 @@ typing-extensions==4.8.0
     # via
     #   kinde-python-sdk
     #   psycopg
+    #   pydantic
+    #   pydantic-core
 urllib3==2.0.7
     # via
     #   kinde-python-sdk
