--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,7 +28,7 @@ charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via pip-tools
-cryptography==42.0.2
+cryptography==42.0.3
     # via authlib
 django==5.0.2
     # via
@@ -83,6 +83,8 @@ pyproject-hooks==1.0.0
     # via build
 python-dateutil==2.8.2
     # via kinde-python-sdk
+python-magic==0.4.27
+    # via tumbs.app (pyproject.toml)
 redis==5.0.1
     # via
     #   django-redis
