--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -14,11 +14,11 @@ asgiref==3.7.2
     # via django
 authlib==1.2.1
     # via kinde-python-sdk
-boto3==1.34.42
+boto3==1.34.43
     # via
     #   django-anymail
     #   django-storages
-botocore==1.34.42
+botocore==1.34.43
     # via
     #   boto3
     #   s3transfer
@@ -33,7 +33,7 @@ cffi==1.16.0
     #   cryptography
 charset-normalizer==3.3.2
     # via requests
-cryptography==42.0.2
+cryptography==42.0.3
     # via authlib
 django==5.0.2
     # via
@@ -94,6 +94,8 @@ python-dateutil==2.8.2
     # via
     #   botocore
     #   kinde-python-sdk
+python-magic==0.4.27
+    # via tumbs.app (pyproject.toml)
 redis==5.0.1
     # via
     #   django-redis
@@ -127,7 +129,7 @@ whitenoise==6.6.0
     # via tumbs.app (pyproject.toml)
 zope-event==5.0
     # via gevent
-zope-interface==6.1
+zope-interface==6.2
     # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
