--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -38,7 +38,7 @@ coverage==7.4.1
     # via
     #   django-coverage-plugin
     #   tumbs.app (pyproject.toml)
-cryptography==42.0.2
+cryptography==42.0.3
     # via authlib
 cssbeautifier==1.15.0
     # via djlint
@@ -139,6 +139,8 @@ pytest-sugar==1.0.0
     # via tumbs.app (pyproject.toml)
 python-dateutil==2.8.2
     # via kinde-python-sdk
+python-magic==0.4.27
+    # via tumbs.app (pyproject.toml)
 pyyaml==6.0.1
     # via djlint
 redis==5.0.1
