--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ cffi==1.16.0
     #   cryptography
 charset-normalizer==3.3.2
     # via requests
-cryptography==42.0.2
+cryptography==42.0.3
     # via authlib
 django==5.0.2
     # via
@@ -61,6 +61,8 @@ pyjwt==2.8.0
     # via kinde-python-sdk
 python-dateutil==2.8.2
     # via kinde-python-sdk
+python-magic==0.4.27
+    # via tumbs.app (pyproject.toml)
 redis==5.0.1
     # via
     #   django-redis
