--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "msg:compile": "python manage.py compilemessages --ignore=venv",
     "reqs": "concurrently npm:reqs:*",
     "reqs:base": "pip-compile --resolver=backtracking --strip-extras --upgrade -o requirements.txt pyproject.toml",
-    "reqs:dev": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra dev -o requirements-dev.txt pyproject.toml",
-    "reqs:test": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra test -o requirements-test.txt pyproject.toml",
-    "reqs:prod": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra prod -o requirements-prod.txt pyproject.toml"
+    "reqs:dev": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra dev -o requirements/dev.txt pyproject.toml",
+    "reqs:test": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra test -o requirements/test.txt pyproject.toml",
+    "reqs:prod": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra prod -o requirements/prod.txt pyproject.toml",
+    "test": "DJANGO_SETTINGS_MODULE=config.settings.test coverage run -m pytest && coverage report"
   }
 }
