Move Auth configuration to specific environment files
The Kinde configuration block has been moved from the base.py to respective environment-specific files: local.py, test.py, and production.py. Added Django settings module environment variable to the GitHub CI workflow. This change allows for clearer separation of Kinde configurations for different environments and for CI testing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
+    env:
+      DJANGO_SETTINGS_MODULE: 'config.settings.test'
+
     steps:
       - name: Checkout Code Repository
         uses: actions/checkout@v4
@@ -63,6 +66,7 @@ jobs:
     env:
       # postgres://user:password@host:port/database
       DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
+      DJANGO_SETTINGS_MODULE: 'config.settings.test'
 
     steps:
       - name: Install system dependencies
