--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,13 @@ cryptography==42.0.4
     # via authlib
 django==5.0.2
     # via
+    #   django-extensions
     #   django-ninja
     #   django-redis
     #   tumbs.app (pyproject.toml)
 django-environ==0.11.2
+    # via tumbs.app (pyproject.toml)
+django-extensions==3.2.3
     # via tumbs.app (pyproject.toml)
 django-ninja==1.1.0
     # via tumbs.app (pyproject.toml)
