--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,13 +3,9 @@
 
 version: 2
 updates:
-  - package-ecosystem: 'github-actions'
-    directory: '/'
-    schedule:
-      interval: 'weekly'
-
   - package-ecosystem: 'npm'
     directory: '/'
+    open-pull-requests-limit: 0
     schedule:
       interval: 'weekly'
 
@@ -17,5 +13,6 @@ updates:
     # Look for a `requirements.txt` in the `root` directory
     # also 'setup.cfg', 'runtime.txt' and 'requirements/*.txt'
     directory: '/'
+    open-pull-requests-limit: 0
     schedule:
       interval: 'weekly'
