--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "postcss": "^8.3.11",
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.0.0",
+    "prettier": "^3.2.5",
+    "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.43.4",
