--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "concurrently": "^8.0.1",
     "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.4.5",
