--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.23.3",
     "@popperjs/core": "^2.10.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
@@ -22,7 +23,9 @@
     "prettier": "^3.2.5",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "sass": "^1.43.4",
     "sass-loader": "^14.1.0",
     "webpack": "^5.65.0",
