--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 asgiref==3.7.2
     # via django
+async-timeout==4.0.3
+    # via redis
 authlib==1.2.1
     # via kinde-python-sdk
 certifi==2022.12.7
@@ -52,13 +54,13 @@ hiredis==2.3.2
     # via tumbs.app (pyproject.toml)
 idna==3.6
     # via requests
-kinde-python-sdk==1.2.2
+kinde-python-sdk==1.2.3
     # via tumbs.app (pyproject.toml)
 pillow==10.2.0
     # via tumbs.app (pyproject.toml)
 pycparser==2.21
     # via cffi
-pydantic==2.6.2
+pydantic==2.6.3
     # via django-ninja
 pydantic-core==2.16.3
     # via pydantic
@@ -66,11 +68,11 @@ pyjwt==2.8.0
     # via kinde-python-sdk
 python-dateutil==2.8.2
     # via kinde-python-sdk
-python-ipware==2.0.1
+python-ipware==2.0.2
     # via django-ipware
 python-magic==0.4.27
     # via tumbs.app (pyproject.toml)
-redis==5.0.1
+redis==5.0.2
     # via
     #   django-redis
     #   tumbs.app (pyproject.toml)
