--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass-tilde-importer": "^1.0.2",
+    "object-hash": "^3.0.0",
     "postcss": "^8.3.11",
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.0.0",
