Prepare initial CMS frontend

--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "sanitize-html": "^2.12.1",
     "sass": "^1.43.4",
     "sass-loader": "^14.1.0",
     "webpack": "^5.65.0",
