--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "dev": "concurrently npm:dev:*",
     "dev:webpack": "webpack serve --config webpack/dev.config.js",
     "dev:django": "python manage.py runserver_plus",
-    "msg:make": "python manage.py makemessages -l cs --ignore=venv --no-location",
-    "msg:compile": "python manage.py compilemessages --ignore=venv",
+    "msg:make": "concurrently npm:msg:make:*",
+    "msg:make:py": "python manage.py makemessages -l cs --no-location -i=venv ",
+    "msg:make:js": "python manage.py makemessages -l cs --no-location -i=venv -i=node_modules -d djangojs",
+    "msg:compile": "python manage.py compilemessages -i=venv",
     "reqs": "concurrently npm:reqs:*",
     "reqs:base": "pip-compile --resolver=backtracking --strip-extras --upgrade -o requirements.txt pyproject.toml",
     "reqs:dev": "pip-compile --resolver=backtracking --strip-extras --upgrade --extra dev -o requirements/dev.txt pyproject.toml",
