--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.10.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-edit-text": "^5.1.1",
     "react-redux": "^9.1.0",
     "sanitize-html": "^2.12.1",
     "sass": "^1.43.4",
