--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-preset-env": "^9.0.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
