--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "author": "Ondřej Nejedlý",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.23.3",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "@mdxeditor/editor": "^2.16.0",
     "@popperjs/core": "^2.11.8",
-    "@reduxjs/toolkit": "^2.2.1",
-    "autoprefixer": "^10.4.18",
+    "@reduxjs/toolkit": "^2.2.2",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -18,7 +19,7 @@
     "mini-css-extract-plugin": "^2.8.1",
     "node-sass-tilde-importer": "^1.0.2",
     "object-hash": "^3.0.0",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.5.2",
     "prettier": "^3.2.5",
@@ -29,13 +30,13 @@
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.1",
     "react-redux": "^9.1.0",
-    "sanitize-html": "^2.12.1",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "webpack": "^5.90.3",
+    "use-debounce": "^10.0.0",
+    "webpack": "^5.91.0",
     "webpack-bundle-tracker": "^3.0.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.3",
+    "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
   },
   "engines": {
