--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
-    "@mdxeditor/editor": "^2.16.0",
+    "@mdxeditor/editor": "^2.18.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.2",
     "autoprefixer": "^10.4.19",
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-edit-text": "^5.1.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "use-debounce": "^10.0.0",
