--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
+    "@hello-pangea/dnd": "^16.6.0",
     "@mdxeditor/editor": "^3.0.1",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.3",
@@ -25,7 +26,6 @@
     "postcss-preset-env": "^9.5.9",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.2",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
