--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,11 @@ dependencies = [
     "django-environ",               # https://github.com/joke2k/django-environ
     "django-extensions",            # https://github.com/django-extensions/django-extensions
     "django-ipware",                # https://github.com/un33k/django-ipware
-    "django-ninja",                 # https://github.com/vitalik/django-ninja
     "django-ordered-model",         # https://github.com/django-ordered-model/django-ordered-model
     "django-redis",                 # https://github.com/jazzband/django-redis
     "django-webpack-loader",        # https://github.com/django-webpack/django-webpack-loader
+    "djangorestframework",          # https://github.com/encode/django-rest-framework
+    "drf-standardized-errors",      # https://github.com/ghazi-git/drf-standardized-errors
 
     "kinde-python-sdk",             # https://kinde.com/
 ]
@@ -122,6 +123,7 @@ max-line-length = 119
 disable = [
     "missing-docstring",
     "invalid-name",
+    "too-few-public-methods",
 ]
 
 [tool.pylint.DESIGN]
@@ -149,3 +151,4 @@ indent_size = 2
 # ==== pytest ====
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings.test"
+testpaths = ["websites/tests"]
