--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,7 +148,7 @@ indent_size = 2
 [tool.djlint.js]
 indent_size = 2
 
-# ==== pytest ====
+# ==== PyTest ====
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings.test"
 testpaths = ["websites/tests"]
