--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-edit-text": "^5.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "sass": "^1.79.3",
+    "sass": "1.76.0",
     "sass-loader": "^14.2.1",
     "shorten-uuid": "^1.0.2",
     "use-debounce": "^10.0.3",
